Ticket #28464: Migration scripts: Added I18N.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -967,6 +967,10 @@ com.top_logic.model.search.providers.MarkerFactoryByExpression.Config.overlap.to
 com.top_logic.model.search.providers.MarkerFactoryByExpression.Config.upper-bound = Obere Schranke
 com.top_logic.model.search.providers.MarkerFactoryByExpression.Config.upper-bound.tooltip = Die Getter-Funktion, die den oberen Grenzwert des Datums abruft. <p> Der Ausdruck wird als Ein-Argument-Funktion erwartet, die das Objekt mit dem Datumsattribut empfängt. </p>
 com.top_logic.model.search.providers.MarkerFactoryByExpression.tooltip = Konfigurierbare <i>Marker-Fabrik</i> mit TL-Script-Ausdrücken.
+com.top_logic.model.search.providers.MigrationScript = Skript zur Migration
+com.top_logic.model.search.providers.MigrationScript.Config.script = Drehbuch
+com.top_logic.model.search.providers.MigrationScript.Config.script.tooltip = Das TL-Skript, das nach dem ersten Start der Anwendung mit einer neuen Softwareversion ausgeführt wird.
+com.top_logic.model.search.providers.MigrationScript.tooltip = <i>Startup-Aktion</i> in TL-Script geschrieben.
 com.top_logic.model.search.providers.ModeSelectorByExpression = Moduswahl über TL-Script
 com.top_logic.model.search.providers.ModeSelectorByExpression.Config.function = Funktion
 com.top_logic.model.search.providers.ModeSelectorByExpression.Config.function.tooltip = Funktion zur Berechnung des Formularfeldmodus für ein Attribut. <p> Die Funktion erwartet das Objekt, das das angezeigte Attribut definiert, als einziges Argument: </p> <code>object -> [one of <code>"editable"</code>, <code>"disabled"</code>, <code>"read-only"</code>, <code>"mandatory"</code>, <code>"hidden"</code>]</code>
