--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -967,6 +967,10 @@ com.top_logic.model.search.providers.MarkerFactoryByExpression.Config.overlap.to
 com.top_logic.model.search.providers.MarkerFactoryByExpression.Config.upper-bound = Upper bound
 com.top_logic.model.search.providers.MarkerFactoryByExpression.Config.upper-bound.tooltip = The getter function retrieving the upper bound date value. <p> The expression is expected to be a one-argument function receiving the object with the date attribute. </p>
 com.top_logic.model.search.providers.MarkerFactoryByExpression.tooltip = Configurable <i>marker factory</i> using TL-Script expressions.
+com.top_logic.model.search.providers.MigrationScript = Migration script
+com.top_logic.model.search.providers.MigrationScript.Config.script = Script
+com.top_logic.model.search.providers.MigrationScript.Config.script.tooltip = The TL-Script to execute after first application startup with a new software version.
+com.top_logic.model.search.providers.MigrationScript.tooltip = <i>Startup action</i> written in TL-Script.
 com.top_logic.model.search.providers.ModeSelectorByExpression = Mode selector by expression
 com.top_logic.model.search.providers.ModeSelectorByExpression.Config.function = Function
 com.top_logic.model.search.providers.ModeSelectorByExpression.Config.function.tooltip = Function computing the form field mode for an attribute. <p> The function expects the object defining the displayed attribute as single argument: </p> <code>object -> [one of <code>"editable"</code>, <code>"disabled"</code>, <code>"read-only"</code>, <code>"mandatory"</code>, <code>"hidden"</code>]</code>
