Ticket #28461: Allow to chose, whether to re-use contacts.

--- a/com.top_logic.contact/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.contact/src/main/java/META-INF/messages_de.properties
@@ -33,6 +33,8 @@ com.top_logic.contact.layout.company.EditCompanyContactComponent.tooltip = Kompo
 com.top_logic.contact.layout.orgunit.OrgUnitEditComponent = Komponente zur Bearbeitung von Organisationseinheiten
 com.top_logic.contact.layout.orgunit.OrgUnitEditComponent.tooltip = Basiskomponente zur Bearbeitung von Org-Einheits-Informationen.
 com.top_logic.contact.layout.person.ContactPersonManager = Manager der Kontaktperson
+com.top_logic.contact.layout.person.ContactPersonManager.Config.reuse-contacts = Wiederverwendung von Kontakten
+com.top_logic.contact.layout.person.ContactPersonManager.Config.reuse-contacts.tooltip = Ob ein Kontakt, der einem Konto zugewiesen wurde, für ein neu erstelltes Konto wiederverwendet wird, wenn die Anmeldenamen übereinstimmen.
 com.top_logic.contact.layout.person.ContactPersonManager.tooltip = <i>Personenmanager</i>, der neue Konten mit Kontaktinformationen initialisiert.
 com.top_logic.contact.layout.person.CreatePersonContactComponent = Komponente zum Erstellen von Personenkontakten
 com.top_logic.contact.layout.person.CreatePersonContactComponent.tooltip = CreateComponent zum Einrichten neuer Personenkontakte.
