--- a/com.top_logic.contact/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.contact/src/main/java/META-INF/messages_en.properties
@@ -33,6 +33,8 @@ com.top_logic.contact.layout.company.EditCompanyContactComponent.tooltip = Compo
 com.top_logic.contact.layout.orgunit.OrgUnitEditComponent = Organization unit edit component
 com.top_logic.contact.layout.orgunit.OrgUnitEditComponent.tooltip = Base component for editing org unit information.
 com.top_logic.contact.layout.person.ContactPersonManager = Contact person manager
+com.top_logic.contact.layout.person.ContactPersonManager.Config.reuse-contacts = Reuse contacts
+com.top_logic.contact.layout.person.ContactPersonManager.Config.reuse-contacts.tooltip = Whether a contact that was assigned to an account is re-used for a newly created account, if the login names match.
 com.top_logic.contact.layout.person.ContactPersonManager.tooltip = <i>Person manager</i> that initializes new accounts with contact information.
 com.top_logic.contact.layout.person.CreatePersonContactComponent = Create person contact component
 com.top_logic.contact.layout.person.CreatePersonContactComponent.tooltip = CreateComponent to set up new Person Contacts.
