Ticket #28310: move resetInvisible to another config

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -6536,8 +6536,6 @@ com.top_logic.mig.html.layout.LayoutComponent.Config.noModelKey.tooltip = Option
 com.top_logic.mig.html.layout.LayoutComponent.Config.renderInline = Inline-Rendern
 com.top_logic.mig.html.layout.LayoutComponent.Config.resPrefix = Ressource-Präfix
 com.top_logic.mig.html.layout.LayoutComponent.Config.resPrefix.tooltip = Das <i>Ressource-Präfix</i> für die konfigurierte Komponente.
-com.top_logic.mig.html.layout.LayoutComponent.Config.resetInvisible = Unsichtbar zurücksetzen
-com.top_logic.mig.html.layout.LayoutComponent.Config.resetInvisible.tooltip = Ob die Komponente ungültig gemacht wird, wenn sie unsichtbar wird. <p> Dies ermöglicht die Freigabe von Ressourcen, wenn diese Komponente nicht mehr sichtbar ist. </p>
 com.top_logic.mig.html.layout.LayoutComponent.Config.saveScrollPosition = Scroll-Position speichern
 com.top_logic.mig.html.layout.LayoutComponent.Config.tabInfo = Registerkarte Info
 com.top_logic.mig.html.layout.LayoutComponent.Config.tabInfo.tooltip = Wenn die konfigurierte Komponente Teil einer <i>Registerkartenkomponente</i> ist, finden Sie hier alle Einstellungen für diese Komponente.
@@ -6551,6 +6549,8 @@ com.top_logic.mig.html.layout.LayoutComponent.tooltip = Grundbaustein eines (HTM
 com.top_logic.mig.html.layout.LayoutComponentUIOptions = Layout-Komponente UI-Optionen
 com.top_logic.mig.html.layout.LayoutComponentUIOptions.model = Modell
 com.top_logic.mig.html.layout.LayoutComponentUIOptions.model.tooltip = Quelle des Modells der Komponente. <p> Eine Komponente zeigt typischerweise einen Inhalt an, der auf einem Modell basiert. Das Modell der Komponente ist ein einzelnes Objekt, auf dem die Komponente operiert. Basierend auf diesem Modell erzeugt z. B. eine Tabellenkomponente eine Liste von Zeilenobjekten, die angezeigt werden sollen. In den meisten Fällen wird das Modell der Komponente nicht direkt angezeigt, sondern es werden einige Aspekte von diesem Modell abgeleitet. Ein weiteres Beispiel ist eine Formularkomponente. Ein Formular zeigt typischerweise mehrere Felder zum Bearbeiten einiger Eigenschaften des Komponentenmodells an. </p> <p> Das Modell der Komponente kann von anderen Komponenten über Kanäle empfangen werden. Ein häufiger Anwendungsfall ist der Empfang eines Modells aus dem Auswahlkanal einer anderen Komponente. In einer solchen Konfiguration ändert sich das Modell der empfangenden Komponente immer dann, wenn ein Benutzer einen neuen Wert in der sendenden Komponente auswählt. Alle Komponenten haben einen <code>model</code>. Einige Komponenten, wie z. B. Tabellen und Bäume, haben auch einen <code>selection</code>. Neben diesen allgemeinen Kanälen kann es auch Komponenten mit spezielleren Kanälen geben.</p>
+com.top_logic.mig.html.layout.LayoutComponentUIOptions.resetInvisible = Unsichtbar zurücksetzen
+com.top_logic.mig.html.layout.LayoutComponentUIOptions.resetInvisible.tooltip = Ob die Komponente ungültig gemacht wird, wenn sie unsichtbar wird. <p> Dies ermöglicht die Freigabe von Ressourcen, wenn diese Komponente nicht mehr sichtbar ist. </p>
 com.top_logic.mig.html.layout.LayoutComponentUIOptions.titleKey = Titel
 com.top_logic.mig.html.layout.LayoutComponentUIOptions.titleKey.tooltip = Internationalisierter Titel dieser Komponente. <p> Wenn die Komponente eine Kachel-Leiste hat, wird dieser Titel dort angezeigt. </p>
 com.top_logic.mig.html.layout.LayoutComponentUIOptions.tooltip = Konfigurationsoptionen von <i>Component</i>, die in vereinfachten Vorlagen für die Komponentenkonfiguration angezeigt werden.
