--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -6536,8 +6536,6 @@ com.top_logic.mig.html.layout.LayoutComponent.Config.noModelKey.tooltip = Option
 com.top_logic.mig.html.layout.LayoutComponent.Config.renderInline = Render inline
 com.top_logic.mig.html.layout.LayoutComponent.Config.resPrefix = Resource prefix
 com.top_logic.mig.html.layout.LayoutComponent.Config.resPrefix.tooltip = The <i>resource prefix</i> for the configured component.
-com.top_logic.mig.html.layout.LayoutComponent.Config.resetInvisible = Reset invisible
-com.top_logic.mig.html.layout.LayoutComponent.Config.resetInvisible.tooltip = Whether the component is invalidated, when the it becomes invisible. <p> This allows to release resources when this component is no longer visible. </p>
 com.top_logic.mig.html.layout.LayoutComponent.Config.saveScrollPosition = Save scroll position
 com.top_logic.mig.html.layout.LayoutComponent.Config.tabInfo = Tab info
 com.top_logic.mig.html.layout.LayoutComponent.Config.tabInfo.tooltip = When the configured component is part of a <i>tab component</i>, here are all the settings for it.
@@ -6551,6 +6549,8 @@ com.top_logic.mig.html.layout.LayoutComponent.tooltip = Basic Building block of 
 com.top_logic.mig.html.layout.LayoutComponentUIOptions = Layout component UI options
 com.top_logic.mig.html.layout.LayoutComponentUIOptions.model = Model
 com.top_logic.mig.html.layout.LayoutComponentUIOptions.model.tooltip = Source of the component's model. <p> A component typically displays some content based on a model. The component's model is a single object, on which the component operates. Based on this model, a table component e.g. produces a list of row objects to be displayed. In most cases, the component's model is not displayed directly, but some aspects derived from this model. Another example is a form component. A form typically displays several fields for editing some properties of the component's model. </p> <p> The component's model can be received from other components through channels. A common use case is to receive a model from another component's selection channel. In such a configuration, the model of the receiving component changes whenever a user selects a new value in the sending component. All components have a <code>model</code> channel. Several components such as tables and trees have also a <code>selection</code> channel. Besides these common channels, there may be components with more specialized channels. </p>
+com.top_logic.mig.html.layout.LayoutComponentUIOptions.resetInvisible = Reset invisible
+com.top_logic.mig.html.layout.LayoutComponentUIOptions.resetInvisible.tooltip = Whether the component is invalidated, when the it becomes invisible. <p> This allows to release resources when this component is no longer visible. </p>
 com.top_logic.mig.html.layout.LayoutComponentUIOptions.titleKey = Title
 com.top_logic.mig.html.layout.LayoutComponentUIOptions.titleKey.tooltip = Internationalized title of this component. <p> If the component has a tile bar, this title is shown there. </p>
 com.top_logic.mig.html.layout.LayoutComponentUIOptions.tooltip = Configuration options of <i>component</i> that are displayed in simplified templates for component configuration.
