Ticket #28310: Tag names for form providers, fixed naming.

--- a/com.top_logic.bpe/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.bpe/src/main/java/META-INF/messages_de.properties
@@ -75,7 +75,7 @@ com.top_logic.bpe.bpml.display.SpecializedForm = Spezialisiertes Formular
 com.top_logic.bpe.bpml.display.SpecializedForm.Config.form = Formular
 com.top_logic.bpe.bpml.display.SpecializedForm.Config.form.tooltip = Das benutzerdefinierte Formular für den aktuellen Prozessschritt.
 com.top_logic.bpe.bpml.display.SpecializedForm.tooltip = <i>Aufgabenformulardefinition</i>, die mit einem benutzerdefinierten Formular konfiguriert ist.
-com.top_logic.bpe.bpml.display.StandardForm = Anderes Formular
+com.top_logic.bpe.bpml.display.StandardForm = Formular-Referenz
 com.top_logic.bpe.bpml.display.StandardForm$Config$AnnotationOverlay = Anpassung von Annotationen
 com.top_logic.bpe.bpml.display.StandardForm$Config$AnnotationOverlay.tooltip = Anpassung eines Attributs in dem für den Prozesstyp definierten Standardformular.
 com.top_logic.bpe.bpml.display.StandardForm.Config.AnnotationOverlay.attribute = Attribut
