--- a/com.top_logic.bpe/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.bpe/src/main/java/META-INF/messages_en.properties
@@ -75,7 +75,7 @@ com.top_logic.bpe.bpml.display.SpecializedForm = Specialized form
 com.top_logic.bpe.bpml.display.SpecializedForm.Config.form = Form
 com.top_logic.bpe.bpml.display.SpecializedForm.Config.form.tooltip = The custom form for the current process step.
 com.top_logic.bpe.bpml.display.SpecializedForm.tooltip = <i>Task form definition</i> that is configured with a customized form.
-com.top_logic.bpe.bpml.display.StandardForm = Other form
+com.top_logic.bpe.bpml.display.StandardForm = Form reference
 com.top_logic.bpe.bpml.display.StandardForm$Config$AnnotationOverlay = Annotation overlay
 com.top_logic.bpe.bpml.display.StandardForm$Config$AnnotationOverlay.tooltip = Customization of an attribute in the default from defined for the process type.
 com.top_logic.bpe.bpml.display.StandardForm.Config.AnnotationOverlay.attribute = Attribute
