Ticket #28472: Added option to display options either in given order or in alphabetical order.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -990,6 +990,8 @@ com.top_logic.model.search.providers.OntoTreeDropByExpression.Config.canDrop.too
 com.top_logic.model.search.providers.OntoTreeDropByExpression.Config.handleDrop.tooltip = Funktion, die einen Drop auf den referenzierten Knoten ausführt. <p> Die Funktion erhält die gezogenen Elemente als erstes Argument und den referenzierten Knoten als zweites Argument. </p> <p> Der von der Funktion zurückgegebene Wert wird an mögliche Post-Drop-Aktionen übergeben. </p>
 com.top_logic.model.search.providers.OntoTreeDropByExpression.tooltip = <i>Tree Drop Target</i> erfolgt auf den referenzierten Zielknoten selbst.
 com.top_logic.model.search.providers.OptionsByExpression = Optionensberechnung in TL-Script
+com.top_logic.model.search.providers.OptionsByExpression.Config.alphabetic-order = Alphabetische Reihenfolge
+com.top_logic.model.search.providers.OptionsByExpression.Config.alphabetic-order.tooltip = Ob die Optionen in alphabetischer Reihenfolge ihrer Bezeichnungen angezeigt werden sollen. <p> Wenn diese Option nicht aktiviert ist, werden die Optionen in der von <i>Funktion</i> erstellten Reihenfolge angezeigt. </p>
 com.top_logic.model.search.providers.OptionsByExpression.Config.function = Funktion
 com.top_logic.model.search.providers.OptionsByExpression.Config.function.tooltip = Die Funktion, die mit dem Objekt ausgeführt wird, das die Eigenschaft enthält, für die Optionen als einzelnes Argument berechnet werden sollen.
 com.top_logic.model.search.providers.OptionsByExpression.tooltip = <i>Generator</i>, der mit Hilfe von Suchausdrücken zum Auffinden der Optionen dynamisch konfiguriert werden kann.
