--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -990,6 +990,8 @@ com.top_logic.model.search.providers.OntoTreeDropByExpression.Config.canDrop.too
 com.top_logic.model.search.providers.OntoTreeDropByExpression.Config.handleDrop.tooltip = Function executing a drop onto the referenced node. <p> The function receives the dragged elements as first argument and the referenced node as second argument. </p> <p> The value returned from the function is passed to potential post-drop actions. </p>
 com.top_logic.model.search.providers.OntoTreeDropByExpression.tooltip = <i>Tree drop target</i> occurs onto referenced target node itself.
 com.top_logic.model.search.providers.OptionsByExpression = Options by expression
+com.top_logic.model.search.providers.OptionsByExpression.Config.alphabetic-order = Alphabetic order
+com.top_logic.model.search.providers.OptionsByExpression.Config.alphabetic-order.tooltip = Whether to present the options in alphabetical order of their labels. <p> If not checked, options are displayed in the order created by <i>Function</i>. </p>
 com.top_logic.model.search.providers.OptionsByExpression.Config.function = Function
 com.top_logic.model.search.providers.OptionsByExpression.Config.function.tooltip = The function that is executed with the object containing the property for which options are to be computed as single argument.
 com.top_logic.model.search.providers.OptionsByExpression.tooltip = <i>Generator</i> that can be configured dynamically using search expressions for finding the options.
