Ticket #28362: Added interface to allow different options, either reset the selection to the default selection or computation of the selection using a TL-Script.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -1023,6 +1023,10 @@ com.top_logic.model.search.providers.SecurityObjectByExpression = Berechtigungso
 com.top_logic.model.search.providers.SecurityObjectByExpression.Config.function = Funktion
 com.top_logic.model.search.providers.SecurityObjectByExpression.Config.function.tooltip = Funktion, die das Berechtigungsobjekt aus dem angegebenen Modell berechnet. <p> Es wird erwartet, dass die Funktion einen Parameter akzeptiert, nämlich das Modell, für das ein Berechtigungsobjekt benötigt wird. Sie muss das Berechtigungsobjekt für das angegebene Modell zurückgeben. </p>
 com.top_logic.model.search.providers.SecurityObjectByExpression.tooltip = Berechnung eines <i>Berechtigungsobjekts</i>, die das Berechtigungsobjekt durch Auswertung eines <i>Ausdrucks</i> auf dem Basismodell berechnet.
+com.top_logic.model.search.providers.SelectionUpdaterByExpression = Neue Auswahl mit TL-Script
+com.top_logic.model.search.providers.SelectionUpdaterByExpression.Config.algorithm = Algorithmus
+com.top_logic.model.search.providers.SelectionUpdaterByExpression.Config.algorithm.tooltip = Der Algorithmus, der die neue Auswahl berechnet. Der Algorithmus wird mit dem Modell der Komponente und der aktuellen Auswahl aufgerufen. Das Ergebnis ist die neue Auswahl der Komponente.
+com.top_logic.model.search.providers.SelectionUpdaterByExpression.tooltip = Aktualisiert die Auswahl mit Hilfe eines <i>TL-Skripts</i>, das die neue Auswahl aus dem Modell und der aktuellen Auswahl der Komponente berechnet.
 com.top_logic.model.search.providers.SequenceNameByExpression = Funktionsaufruf
 com.top_logic.model.search.providers.SequenceNameByExpression.Config.sequence-name = Name der Sequenz
 com.top_logic.model.search.providers.SequenceNameByExpression.Config.sequence-name.tooltip = Funktion, die den Sequenznamen für einen gegebenen Kontext berechnet. <p> Die Funktion erwartet den Erstellungskontext eines Objekts als einziges Argument. Das Ergebnis der Funktion ist ein Bezeichner für die Sequenz. Für jeden eindeutigen Wert, der von dieser Funktion zurückgegeben wird, wird eine neue Sequenz von Zahlen gestartet. </p>
