--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -1023,6 +1023,10 @@ com.top_logic.model.search.providers.SecurityObjectByExpression = Security objec
 com.top_logic.model.search.providers.SecurityObjectByExpression.Config.function = Function
 com.top_logic.model.search.providers.SecurityObjectByExpression.Config.function.tooltip = Function that computes the security object from the given model. <p> The function is expected to accept one parameter, the model for which a security object is required. It must return the security object for the given model. </p>
 com.top_logic.model.search.providers.SecurityObjectByExpression.tooltip = <i>Security object provider</i> computing the security object by evaluating an <i>expression</i> on the base model.
+com.top_logic.model.search.providers.SelectionUpdaterByExpression = New selection with TL-Script
+com.top_logic.model.search.providers.SelectionUpdaterByExpression.Config.algorithm = Algorithm
+com.top_logic.model.search.providers.SelectionUpdaterByExpression.Config.algorithm.tooltip = The algorithm that computes the new selection. The algorithm is called with the model of the component and the current selection. The result is the new selection of the component.
+com.top_logic.model.search.providers.SelectionUpdaterByExpression.tooltip = Updates the selection using a <i>TL-Script</i> computes the new selection from the model and the current selection of the component.
 com.top_logic.model.search.providers.SequenceNameByExpression = Sequence name by expression
 com.top_logic.model.search.providers.SequenceNameByExpression.Config.sequence-name = Sequence name
 com.top_logic.model.search.providers.SequenceNameByExpression.Config.sequence-name.tooltip = Function computing the sequence name for a given context. <p> The function expects the creation context of an object as single argument. The result of the function is an identifier for the sequence. A new sequence of numbers is started for each unique value returned from this function. </p>
