--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -3025,7 +3025,8 @@ com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.multiple
 com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.presentation = Darstellung
 com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.presentation.tooltip = Option, wie die Auswahl angezeigt werden soll.
 com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.selectionOnModelChange = Auswahl bei Modellwechsel
-com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.selectionOnModelChange.tooltip = Berechnet die neue Auswahl der Komponente, wenn sich das Modell der Komponente ändert. <p> Die Funktion wird mit dem neuen Modell und der aktuellen Auswahl aufgerufen. </p> <p> Wenn nichts eingestellt ist, bleibt die Auswahl bei einer Modelländerung unberührt, d.h. es wird versucht, die aktuelle Auswahl wieder zu verwenden, wenn möglich. </p>
+com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.selectionUpdateOnModelChange = Aktualisierung der Auswahl bei Modellwechsel
+com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.selectionUpdateOnModelChange.tooltip = Aktualisiert die Auswahl der Komponente, wenn sich das Modell der Komponente geändert hat.
 com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.types = Typen
 com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.types.tooltip = Typ(en) der Optionen. <p> Nur für die Anzeige der Tabellenauswahl erforderlich, um eine entsprechende Tabellenkonfiguration mit Spalten für Attribute der Typen zu berechnen. </p>
 com.top_logic.layout.form.component.AbstractSelectorComponent.tooltip = Basisklasse für Komponenten, die ein einzelnes <i>Auswahlfeld</i> mit Optionen darstellen, die als Kontext für andere Komponenten über den Auswahlkanal verwendet werden können. <p> <b>Hinweis</b>: Verwenden Sie anstelle einer Unterklasse dieser Klasse besser eine <i>Selektor-Komponente</i>, die über einen <i>Listenmodell-Builder</i> </p>vollständig konfigurierbar ist.\ 
@@ -3130,6 +3131,8 @@ com.top_logic.layout.form.component.PostCreateAction.WithTransform.Config.input 
 com.top_logic.layout.form.component.PostCreateAction.WithTransform.Config.input.tooltip = Der Eingabewert für diese UI-Aktion. <p> Wenn nicht angegeben, wird standardmäßig das Ergebnis des Befehls als Eingabe verwendet. </p>
 com.top_logic.layout.form.component.ResetModelCommandHandler = Modell zurücksetzen
 com.top_logic.layout.form.component.ResetModelCommandHandler.tooltip = <i>Befehlshandler</i>, der das Modell der Komponente zurücksetzt.
+com.top_logic.layout.form.component.ResetSelection = Auswahl zurücksetzen
+com.top_logic.layout.form.component.ResetSelection.tooltip = Setzt die Auswahl auf die Standardauswahl zurück, sofern eine solche existiert.
 com.top_logic.layout.form.component.RestrictedDefaultSaveCommandHandler = Eingeschränkter Standard-Speicherbefehl-Handler
 com.top_logic.layout.form.component.RestrictedDefaultSaveCommandHandler.tooltip = DefaultSaveCommandHandler mit eingeschränkter Schreibbefehlsgruppe.
 com.top_logic.layout.form.component.RestrictedSwitchEditCommandHandler = Eingeschränkter Switch-Editierbefehl-Handler
