--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -3025,7 +3025,8 @@ com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.multiple
 com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.presentation = Presentation
 com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.presentation.tooltip = Option how to display the selection.
 com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.selectionOnModelChange = Selection on model change
-com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.selectionOnModelChange.tooltip = Computes the new selection of the component when the model of the component changes. <p> The function is called with the new model and the current selection. </p> <p> When nothing is set, then the selection remains untouched on model change, i.e. it is tried to reuse the current selection if possible. </p>
+com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.selectionUpdateOnModelChange = Selection update on model change
+com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.selectionUpdateOnModelChange.tooltip = Updates the selection of the component when the model of the component has changed.
 com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.types = Types
 com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.types.tooltip = Type(s) of options. <p> Only required for table select display to compute a corresponding table configuration with columns for attributes of the types. </p>
 com.top_logic.layout.form.component.AbstractSelectorComponent.tooltip = Base class for components presenting a single <i>select field</i> providing options to be used as context for other components through the selection channel. <p> <b>Note</b>: Instead of sub-classing this class, better use <i>selector component</i> that is fully configurable through a <i>list model builder</i>. </p>
@@ -3130,6 +3131,8 @@ com.top_logic.layout.form.component.PostCreateAction.WithTransform.Config.input 
 com.top_logic.layout.form.component.PostCreateAction.WithTransform.Config.input.tooltip = The input value for this UI action. <p> If not given, the command result is used as input by default. </p>
 com.top_logic.layout.form.component.ResetModelCommandHandler = Reset model command handler
 com.top_logic.layout.form.component.ResetModelCommandHandler.tooltip = <i>Command handler</i> resetting the component's model.
+com.top_logic.layout.form.component.ResetSelection = Reset selection
+com.top_logic.layout.form.component.ResetSelection.tooltip = Resets the selection to the default selection, if one exists.
 com.top_logic.layout.form.component.RestrictedDefaultSaveCommandHandler = Restricted default save command handler
 com.top_logic.layout.form.component.RestrictedDefaultSaveCommandHandler.tooltip = DefaultSaveCommandHandler with restricted write command group.
 com.top_logic.layout.form.component.RestrictedSwitchEditCommandHandler = Restricted switch edit command handler
