--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -3025,8 +3025,7 @@ com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.multiple
 com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.presentation = Darstellung
 com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.presentation.tooltip = Option, wie die Auswahl angezeigt werden soll.
 com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.selectionOnModelChange = Auswahl bei Modellwechsel
-com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.selectionUpdateOnModelChange = Aktualisierung der Auswahl bei Modellwechsel
-com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.selectionUpdateOnModelChange.tooltip = Aktualisiert die Auswahl der Komponente, wenn sich das Modell der Komponente geändert hat.
+com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.selectionOnModelChange.tooltip = Aktualisiert die Auswahl der Komponente, wenn sich das Modell der Komponente geändert hat.
 com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.types = Typen
 com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.types.tooltip = Typ(en) der Optionen. <p> Nur für die Anzeige der Tabellenauswahl erforderlich, um eine entsprechende Tabellenkonfiguration mit Spalten für Attribute der Typen zu berechnen. </p>
 com.top_logic.layout.form.component.AbstractSelectorComponent.tooltip = Basisklasse für Komponenten, die ein einzelnes <i>Auswahlfeld</i> mit Optionen darstellen, die als Kontext für andere Komponenten über den Auswahlkanal verwendet werden können. <p> <b>Hinweis</b>: Verwenden Sie anstelle einer Unterklasse dieser Klasse besser eine <i>Selektor-Komponente</i>, die über einen <i>Listenmodell-Builder</i> </p>vollständig konfigurierbar ist.\ 
