--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -3025,8 +3025,7 @@ com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.multiple
 com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.presentation = Presentation
 com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.presentation.tooltip = Option how to display the selection.
 com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.selectionOnModelChange = Selection on model change
-com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.selectionUpdateOnModelChange = Selection update on model change
-com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.selectionUpdateOnModelChange.tooltip = Updates the selection of the component when the model of the component has changed.
+com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.selectionOnModelChange.tooltip = Updates the selection of the component when the model of the component has changed.
 com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.types = Types
 com.top_logic.layout.form.component.AbstractSelectorComponent.UIOptions.types.tooltip = Type(s) of options. <p> Only required for table select display to compute a corresponding table configuration with columns for attributes of the types. </p>
 com.top_logic.layout.form.component.AbstractSelectorComponent.tooltip = Base class for components presenting a single <i>select field</i> providing options to be used as context for other components through the selection channel. <p> <b>Note</b>: Instead of sub-classing this class, better use <i>selector component</i> that is fully configurable through a <i>list model builder</i>. </p>
