Ticket #28310: Consolidated labels used for tasks.

--- a/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.bpml.messages_de.properties
+++ b/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.bpml.messages_de.properties
@@ -41,8 +41,9 @@ model.tl.bpe.bpml.ComplexGateway = ComplexGateway
 model.tl.bpe.bpml.ConditionalEventDefinition = Bedingt
 model.tl.bpe.bpml.DefaultGateway = DefaultGateway
 model.tl.bpe.bpml.DefaultGateway.defaultFlow = Standardweg
-model.tl.bpe.bpml.Described = Described
+model.tl.bpe.bpml.Described = Mit Beschreibung
 model.tl.bpe.bpml.Described.descriptionI18N = Beschreibung
+model.tl.bpe.bpml.Described.tooltip = Abstrakter Obertyp für alle Bestandteile eines Workflows, die eine Beschreibung enthalten können.
 model.tl.bpe.bpml.DisplayDescription = DisplayDescription
 model.tl.bpe.bpml.Edge = Edge
 model.tl.bpe.bpml.Edge.process = Prozess
@@ -69,8 +70,9 @@ model.tl.bpe.bpml.Externalized.extId = Diagramm-ID
 model.tl.bpe.bpml.FlowSource = FlowSource
 model.tl.bpe.bpml.FlowTarget = FlowTarget
 model.tl.bpe.bpml.Gateway = Gateway
-model.tl.bpe.bpml.Iconified = Iconified
+model.tl.bpe.bpml.Iconified = Mit Icon
 model.tl.bpe.bpml.Iconified.icon = Symbol
+model.tl.bpe.bpml.Iconified.tooltip = Abstrakter Obertyp für alle Bestandteile eines Workflows, die mit einem Icon dargestellt werden können.
 model.tl.bpe.bpml.InclusiveGateway = InclusiveGateway
 model.tl.bpe.bpml.IntermediateCatchEvent = IntermediateCatchEvent
 model.tl.bpe.bpml.IntermediateEvent = IntermediateEvent
@@ -90,7 +92,7 @@ model.tl.bpe.bpml.ManualTask = ManualTask
 model.tl.bpe.bpml.ManualTask.canEdit = Bearbeitbar
 model.tl.bpe.bpml.ManualTask.canEdit.tooltip = Ob das Formular in diesem Prozesschritt bearbeitet werden kann. Wenn nicht, dann dient es nur der Anzeige des Zustandes des aktuellen Prozessobjektes.
 model.tl.bpe.bpml.ManualTask.displayDescription = Darstellung
-model.tl.bpe.bpml.ManualTask.formDefinition = Darstellung
+model.tl.bpe.bpml.ManualTask.formDefinition = Formular
 model.tl.bpe.bpml.ManualTask.formDefinition.tooltip = Formular für diesen Prozesschritt. Dieses Formular wird einem Nutzer angezeigt, der für diesen Prozesschritt als Bearbeiter zugeordnet ist.
 model.tl.bpe.bpml.MessageEventDefinition = Nachricht
 model.tl.bpe.bpml.MessageFlow = MessageFlow
@@ -156,16 +158,17 @@ model.tl.bpe.bpml.StartEvent = StartEvent
 model.tl.bpe.bpml.StartEvent.title = Bezeichnung
 model.tl.bpe.bpml.StartEvent.title.tooltip = Bezeichnung des Start Events, wie sie einem Benutzer während der Workflow-Bearbeitung angezeigt werden soll.
 model.tl.bpe.bpml.SubProcess = SubProcess
-model.tl.bpe.bpml.Task = Task
+model.tl.bpe.bpml.Task = Aufgabenbeschreibung
 model.tl.bpe.bpml.Task.boundaryEvents = Boundary Events
 model.tl.bpe.bpml.Task.label = Label
-model.tl.bpe.bpml.Task.label.tooltip = Bezeichnung der Aufgabe, wie sie einem Benutzer während der Workflow-Bearbeitung angezeigt werden soll (z. B. in einer Überschrift).
-model.tl.bpe.bpml.Task.titleFunction = Berechnung der Bezeichnung
-model.tl.bpe.bpml.Task.titleFunction.tooltip = Dynamische Berechnung der Bezeichnung einer Aufgabe, wie sie einem Nutzer bei der Workflow-Bearbeitung angezeigt werden soll. In die Berechnung kann das Prozessmodell und die aktuelle Aufgabe einfließen.\n\nErwartet wird eine Funktion mit drei Argumenten. Als erstes Argument wird die aktuelle Prozessdurchführung (Instanz von `tl.bpe.execution:ProcessExecution`), als zweites Argument die aktuell bearbeitete Aufgabe (`tl.bpe.bpml:Task`) und als drittes Argument der aktuelle Prozesschritt (`tl.bpe.execution:Token`) übergeben.
+model.tl.bpe.bpml.Task.label.tooltip = Bezeichnung der Aufgabe, wie sie einem Benutzer angezeigt wird, wenn eine abstrakte Aufgabe ohne einen Kontext (eine konkrete Prozessdurchführung) angezeigt wird. Normalerweise wird aber nicht eine abstrakte Aufgabe des Workflows, sondern eine konkrete Aufgabe in einer konkreten Prozessdurchführung angezeigt (z.B. in einer Überschrift oder einer Kachel).
+model.tl.bpe.bpml.Task.titleFunction = Dynamische Bezeichnung
+model.tl.bpe.bpml.Task.titleFunction.tooltip = Funktion, um die Bezeichnung einer Aufgabe zu berechnen. In die Berechnung kann das Prozessmodell und die aktuelle Aufgabe einfließen.\n\nErwartet wird eine Funktion mit bis zu vier Argumenten: Die angegebene statische Bezeichnung steht als erstes Argument zur Verfügung. Darauf folgen die aktuelle Prozessdurchführung (Instanz von `tl.bpe.execution:ProcessExecution`), die aktuell bearbeitete Aufgabenstellung (`tl.bpe.bpml:Task`) und als letztes Argument der aktuelle Prozesschritt (`tl.bpe.execution:Token`).\n\nIst keine dynamische Bezeichnung angegeben, so ist der Effekt derselbe, wie wenn die folgende Funktion angegeben wäre: i18n -> execution -> task -> token -> $i18n.localize($execution, $task, $token)
 model.tl.bpe.bpml.Task.titleI18N = Bezeichnung
-model.tl.bpe.bpml.Task.titleI18N.tooltip = Bezeichnung der Aufgabe, wie sie einem Nutzer bei der Workflow-Bearbeitung angezeigt werden soll (z.B. in einer Überschrift).
+model.tl.bpe.bpml.Task.titleI18N.tooltip = Bezeichnung der Aufgabe, wie sie einem Nutzer bei der Workflow-Bearbeitung angezeigt werden soll (z.B. in einer Überschrift).\n\nWenn keine dynamische Bezeichnung angegeben ist, wird ein Platzhalter ({0}) im Text mit der zugrundeliegenden Prozessinstanz gefüllt.
 model.tl.bpe.bpml.Task.tokenType = Zustandstyp
 model.tl.bpe.bpml.Task.tokenType.tooltip = Der Typ des Objektes, das den Zustand einer Prozessdurchführung in der aktuellen Aufgabe beschreibt.\n\nDer Verlauf einer Prozessdurchführung setzt sich aus der Liste aller Zustandsobjekte zusammen, die im Laufe der Prozessdurchführung angelegt wurden. In jedem dieser Objekte wird mindestens die Verweildauer des Prozesses in dieser Aufgabe und der Bearbeiter der Aufgabe gespeichert.\n\nDurch Angabe eines eigenen Typs für das Zustandsobjekt können weitere Informationen im Verlauf des Prozesses gesammelt werden, die nicht direkt mit dem Prozessobjekt selbst verknüpft sind.
+model.tl.bpe.bpml.Task.tooltip = Abstrakter Obertyp für alle Zustände in einer Workflow-Beschreibung. Eine aktive Prozessdurchführung befindet sich in einem oder mehreren solchen Zuständen. Die Kombination aus abstrakter Aufgabenbeschreibung und Prozessdurchführungsobjekt ergibt die konkrete Aufgabe. Eine solche konkrete Aufgabe muss je nach konkreter Aufgabenbeschreibung entweder von einem Nutzer des Systems in der Anwendung durchgeführt werden, oder sie wird automatisch oder zeitgesteuert vom System durchgeführt.
 model.tl.bpe.bpml.TerminateEventDefinition = Beenden
 model.tl.bpe.bpml.TextAnnotation = TextAnnotation
 model.tl.bpe.bpml.TextAnnotation.annotationAssociations = Annotationslinks
