--- a/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.bpml.messages_en.properties
+++ b/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.bpml.messages_en.properties
@@ -43,6 +43,7 @@ model.tl.bpe.bpml.DefaultGateway = DefaultGateway
 model.tl.bpe.bpml.DefaultGateway.defaultFlow = Default flow
 model.tl.bpe.bpml.Described = Described
 model.tl.bpe.bpml.Described.descriptionI18N = Description
+model.tl.bpe.bpml.Described.tooltip = Abstract generic type for all components of a workflow that can contain a description.
 model.tl.bpe.bpml.DisplayDescription = DisplayDescription
 model.tl.bpe.bpml.Edge = Edge
 model.tl.bpe.bpml.Edge.label = Label
@@ -73,6 +74,7 @@ model.tl.bpe.bpml.FlowTarget = FlowTarget
 model.tl.bpe.bpml.Gateway = Gateway
 model.tl.bpe.bpml.Iconified = Iconified
 model.tl.bpe.bpml.Iconified.icon = Icon
+model.tl.bpe.bpml.Iconified.tooltip = Abstract generic type for all components of a workflow that can be represented with an icon.
 model.tl.bpe.bpml.InclusiveGateway = InclusiveGateway
 model.tl.bpe.bpml.IntermediateCatchEvent = IntermediateCatchEvent
 model.tl.bpe.bpml.IntermediateEvent = IntermediateEvent
@@ -92,7 +94,7 @@ model.tl.bpe.bpml.ManualTask = ManualTask
 model.tl.bpe.bpml.ManualTask.canEdit = Editable
 model.tl.bpe.bpml.ManualTask.canEdit.tooltip = Whether the form can be edited in this process step. If not, it is only used to display the status of the current process object.
 model.tl.bpe.bpml.ManualTask.displayDescription = Display description
-model.tl.bpe.bpml.ManualTask.formDefinition = Display
+model.tl.bpe.bpml.ManualTask.formDefinition = Form
 model.tl.bpe.bpml.ManualTask.formDefinition.tooltip = Form for this process step. This form is displayed to a user who is assigned as the processor for this process step.
 model.tl.bpe.bpml.MessageEventDefinition = Message
 model.tl.bpe.bpml.MessageFlow = MessageFlow
@@ -160,17 +162,19 @@ model.tl.bpe.bpml.StartEvent = StartEvent
 model.tl.bpe.bpml.StartEvent.title = Title
 model.tl.bpe.bpml.StartEvent.title.tooltip = Title of the start event as it should be displayed to a user during workflow processing.
 model.tl.bpe.bpml.SubProcess = SubProcess
-model.tl.bpe.bpml.Task = Task
+model.tl.bpe.bpml.Task = Task description
 model.tl.bpe.bpml.Task.boundaryEvents = Boundary Events
 model.tl.bpe.bpml.Task.label = Label
-model.tl.bpe.bpml.Task.label.tooltip = Name of the task as it should be displayed to a user during workflow processing (e.g. in a heading).
+model.tl.bpe.bpml.Task.label.tooltip = Name of the task as it is displayed to a user when an abstract task is displayed without a context (a concrete process execution). Normally, however, a concrete task is displayed in a concrete process execution (e.g. in a heading or a tile) rather than an abstract task of the workflow.
 model.tl.bpe.bpml.Task.labelFunction = Label function
 model.tl.bpe.bpml.Task.labelFunction.tooltip = Dynamic calculation of the name of a task as it should be displayed to a user during workflow processing. The process model and the current task can be included in the calculation. A function with three arguments is expected. The current process execution (instance of `tl.bpe.execution:ProcessExecution`) is passed as the first argument, the currently processed task (`tl.bpe.bpml:Task`) as the second argument and the current process step (`tl.bpe.execution:Token`) as the third argument.
-model.tl.bpe.bpml.Task.titleFunction = Calculation of the title
+model.tl.bpe.bpml.Task.titleFunction = Dynamic title
+model.tl.bpe.bpml.Task.titleFunction.tooltip = Function to calculate the title of a task. The process model and the current task can be included in the calculation. \n\nA function with up to four arguments is expected: The specified static title is available as the first argument. This is followed by the current process execution (instance of `tl.bpe.execution:ProcessExecution`), the task currently being processed (`tl.bpe.bpml:Task`) and, as the last argument, the current process step (`tl.bpe.execution:Token`). \n\nIf no dynamic title is specified, the effect is the same as if the following function were specified: i18n -> execution -> task -> token -> $i18n.localize($execution, $task, $token)
 model.tl.bpe.bpml.Task.titleI18N = Title
-model.tl.bpe.bpml.Task.titleI18N.tooltip = Name of the task as it should be displayed to a user during workflow processing (e.g. in a heading).
+model.tl.bpe.bpml.Task.titleI18N.tooltip = Name of the task as it should be displayed to a user during workflow processing (e.g. in a heading). \n\nIf no dynamic name is specified, a placeholder ({0}) in the text is filled with the underlying process instance.
 model.tl.bpe.bpml.Task.tokenType = State type
 model.tl.bpe.bpml.Task.tokenType.tooltip = The type of object that describes the status of a process execution in the current task. \n\nThe history of a process execution is made up of the list of all status objects that were created during the course of the process execution. In each of these objects, at least the duration of the process in this task and the processor of the task are saved. \n\nBy specifying a separate type for the status object, further information can be collected during the course of the process that is not directly linked to the process object itself.
+model.tl.bpe.bpml.Task.tooltip = Abstract superordinate type for all states in a workflow description. An active process execution is in one or more of these states. The combination of abstract task description and process execution object results in the concrete task. Depending on the concrete task description, such a concrete task must either be carried out by a user of the system in the application, or it is carried out automatically or time-controlled by the system.
 model.tl.bpe.bpml.TerminateEventDefinition = Terminate
 model.tl.bpe.bpml.TextAnnotation = TextAnnotation
 model.tl.bpe.bpml.TextAnnotation.annotationAssociations = Annotation links
