--- a/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.execution.messages_de.properties
+++ b/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.execution.messages_de.properties
@@ -31,4 +31,5 @@ model.tl.bpe.execution.Token.node = Aufgabe
 model.tl.bpe.execution.Token.previous = Vorige Aufgabe(n)
 model.tl.bpe.execution.Token.processExecution = Prozess
 model.tl.bpe.execution.Token.startDate = Start
+model.tl.bpe.execution.Token.tooltip = Eine konkrete Aufgabe innerhalb einer Prozessdurchführung. Die Aufgabe wird definiert durch die Aufgabenbeschreibung eines Workflows und mit den Daten des Prozessdurchführungsobjekt angezeigt und ausgeführt.
 model.tl.bpe.execution.Token.userRelevant = Manuell
