--- a/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.execution.messages_en.properties
+++ b/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.execution.messages_en.properties
@@ -31,4 +31,5 @@ model.tl.bpe.execution.Token.node = Task
 model.tl.bpe.execution.Token.previous = Previous job
 model.tl.bpe.execution.Token.processExecution = Process
 model.tl.bpe.execution.Token.startDate = Start date
+model.tl.bpe.execution.Token.tooltip = A specific task within a process execution. The task is defined by the task description of a workflow and is displayed and executed with the data of the process execution object.
 model.tl.bpe.execution.Token.userRelevant = User relevant
